kodi/service.yml
apiVersion: v1
kind: Service
metadata:
  name: kodi
  labels:
    app: kodi
spec:
  ports:
  - name: http
    port: 8080
  - name: server
    port: 9777
    protocol: UDP
  selector:
    app: kodi
