kodi/ingress.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: kodi
  annotations:
    kubernetes.io/ingress.class: "traefik"
    # traefik.frontend.passHostHeader: "true"
    # traefik.backend.loadbalancer.stickey: "true"
    # ingress.kubernetes.io/auth-type: "basic"
spec:
  rules:
  - host: mail.leangeder.eu
    http:
      paths:
      - path: /
        backend:
          serviceName: kodi
          servicePort: http
